@@ -33,6 +33,7 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.OffsetDateTime;
 import java.time.temporal.ChronoUnit;
@@ -40,7 +41,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -55,7 +55,6 @@ public class GestionnaireService {
     private final PasswordEncoder passwordEncoder;
     private final CandidatureRepository candidatureRepository;
     private final NotificationRepository notificationRepository;
-    private final PostulationNotificationRepository postulastionNotificationRepository;
     private final EntenteRepository ententeRepository;
     private final NotificationsHelper notificationsHelper;
 
@@ -70,14 +69,16 @@ public class GestionnaireService {
     }
 
 
-    public List<StageDTO> getStagesByStatus(String status) {
+    public List<StageDTO> getStagesByStatus(String status, String year) {
+        int yearNumber = year != null ? Integer.parseInt(year) : LocalDate.now().getYear();
+
         return stageRepository.findByStatus(OfferStatus.valueOf(status))
                 .stream()
                 .map(stage -> {
                     Employeur employeur = employeurRepository.getEmployeurByCredentials_Username(stage.getEmployeurEmail());
                     return StageDTO.fromModel(stage, employeur);
-                })
-                .collect(Collectors.toList());
+                }).filter(stage -> stage.getCreatedAt().getYear() ==  yearNumber)
+                .toList();
     }
 
     @Transactional
@@ -134,12 +135,14 @@ public class GestionnaireService {
         }
     }
 
-    public List<StageDTO> getAllStages() throws FailedToRetrieveStagesException {
+    public List<StageDTO> getAllStages(String year) throws FailedToRetrieveStagesException {
+        int yearNumber = year != null ? Integer.parseInt(year) : LocalDate.now().getYear();
+
         try {
             return stageRepository.findAll().stream().map(stage -> {
                 Employeur emp = employeurRepository.getEmployeurByCredentials_Username(stage.getEmployeurEmail());
                 return StageDTO.fromModel(stage, emp);
-            }).toList();
+            }).filter(stage -> stage.getStartDate().getYear() ==  yearNumber).toList();
         } catch (Exception e) {
             throw new FailedToRetrieveStagesException("Échec lors de la récupération des stages.", e);
         }
